# wychcheck

./: .gitignore  .gitmodules  BLOG.md  CLAUDE.md  CMakeLists.txt  README.md  ctvcc2ueujnoc5lgrbldjer28vbjuhgs  manifest
.beads/: metadata.json
.github/workflows/: test.yml
src/: hex.c  hex.h  main.c  runner.h
src/runners/: aead.c  daead.c  dsa.c  ecdh.c  ecdsa.c  ecdsa_p1363.c  eddsa.c  hkdf.c  ind_cpa.c  keywrap.c  mac.c  mac_with_iv.c  mldsa.c  mldsa_acvp.c  mlkem.c  mlkem_acvp.c  pbes2.c  pbkdf2.c  rsa_decrypt.c  rsa_oaep.c  rsa_pss.c  rsa_sig.c  rsa_sign.c  slhdsa_acvp.c  xdh.c
test/: run_tests.sh
test/vectors_fail/: aes_gcm_fail_test.json
test/vectors_pass/: aes_gcm_pass_test.json
testvectors_acvp/: mldsa_acvp_keygen_test.json  mldsa_acvp_sigver_test.json  mlkem_acvp_encapdecap_test.json  mlkem_acvp_keygen_test.json  slhdsa_acvp_keygen_test.json  slhdsa_acvp_siggen_test.json  slhdsa_acvp_sigver_test.json
testvectors_acvp/SLH-DSA-keyGen-FIPS205/: expectedResults.json  prompt.json
testvectors_acvp/SLH-DSA-sigGen-FIPS205/: expectedResults.json  prompt.json
testvectors_acvp/SLH-DSA-sigVer-FIPS205/: expectedResults.json  prompt.json
testvectors_rfc/: rfc3394_aeskw_test.json  rfc5869_hkdf_test.json  rfc7748_x25519_test.json  rfc7748_x448_test.json  rfc8032_eddsa_test.json  rfc8439_chacha20poly1305_test.json
tools/: README.md  make_rfc_vectors.py  merge_acvp.py
